Changes to index.html

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
           <input class="checkbox" type="checkbox" id="comma-first">
           <label for="comma-first">Use comma-first list style?</label>
           <br>
+          <input class="checkbox" type="checkbox" id="space-before-closing-tag">
+          <label for="space-before-closing-tag">Keep space before `/>` for self-closing tags?</label>
+          <br>
           <input class="checkbox" type="checkbox" id="detect-packers">
           <label for="detect-packers">Detect packers and obfuscators? (unsafe)</label>
           <br>
